# mercastatsv2

./: .env.example  .gitignore  Cargo.toml  DASHBOARD_GUIDE.md  IMPLEMENTATION_COMPLETE.md  LICENSE  PR_SUMMARY.md  README.md  claude.md  dev.js  docker-compose.yml
.claude/: settings.local.json
.github/agents/: my-agent.agent.md
.sqlx/: query-081cc1ed4a628444ccf9f92928b0b16ae42614bd49c367e6b69c7b10aafc1090.json  query-24d2d273b18b4a17a02e33e16c80531ee0e56d427843e6bc1c32c6f6420a121a.json  query-2e21a6187a9033faead530ba2241d7f0a4d384a458f78f7c58b83a4021d674ac.json  query-325fd217297454a414d84f269b73b082bc3b963fb94fd5edeb4e5688cf924855.json  query-32f66afb1e6b6b944908f27100ab5b4e75dd28147efec3dff09da1d3051019b2.json  query-36746763fdcd80d4e7503589a08062b3d23301084df21011b74ba2b23d8575be.json  query-3abfd9a49f6cf62135595c2b4adf5efb87716c831129d2d49c13609c4d4f5d1b.json  query-44e96461003f3093b7ea3c7db3edbd4ef3254d2f1fe0b4eea3ad4998ea4d23b6.json  query-4621af3e95f1c87889d448fda8a0770e4ce82a718e51ffd6f8509f160f569361.json  query-4a9b3f98730f74443e2e687c5d44b2d119ad048cc3d95dddb454fce29c386389.json  query-53ad3c38193db5afa07cd2b05b45a8c868fe6cbf68c5ad86bdfc9580b7c95b67.json  query-7803cdb70393b01004ef5a224d21ee2c11571fa120907c51798ce996468a941c.json  query-78ab7776650e122fb6f5f89fc9ef827d6dc2dada25ec4463b7314fb1d5ac90ea.json  query-8f5e13717abd98fbe00d8e41f2177607a538eb85faadee634e53d71ed192a172.json  query-94f2622fa1ed98cd2cf12964352986a581418e07c9e8de024a9340982850de3d.json  query-ac19fcd3dcfc50252c4828adb7994876480291a39048476821e7611a9c75f14a.json  query-ae3c2a5447821e8dfd2717fbbcc0d18530902c009fdd6a6d055b956c7c3013d0.json  query-b349435da8a1a20a94c60cd4afb744bf28655bdcecb6c419612418770c9e853f.json  query-c06c9f536c9a47dd13cd970833ce58a843e364f22f34919fc75c388e565e0bc4.json  query-c79e7a788ad24281e112da0926d8ec4ac7839138217ce037f6c23a6979981b37.json  query-cc2ab8a951259817b64afb20729e35634384939e0f84ffde5cf28f88ec022e32.json  query-d784eb91295f94d286052f6cb4016d0516f95ae285e9782c094dea13b07c8178.json  query-d8642e065ab3277af406d616ff2a7b2ce135cf63f88067ec9ff03cba5136769f.json  query-da13f0401ee0f9427ed6d1848055d15b81a81ddc888d70dcc85be3cd8e163ce5.json  query-ed51af9bd145292bb48af2360a1968093740b14a84b37b4b4e2e2d1f8c5d42d4.json
backend/: .dockerignore  Cargo.toml  dockerfile
backend/migrations/: 0002_ml_views.sql
backend/src/: config.rs  error.rs  main.rs
backend/src/db/: mod.rs  products.rs  purchases.rs  stats.rs  ticket_history.rs  tickets.rs  users.rs
backend/src/middleware/: auth.rs  mod.rs
backend/src/models/: mod.rs  product.rs  purchase.rs  purchase_product.rs  ticket_pdf.rs  user.rs
backend/src/routes/: auth.rs  intelligence.rs  mod.rs  ocr.rs  stats.rs  tickets.rs
backend/src/schema/: auth.rs  mod.rs  ocr.rs  stats.rs
backend/src/services/: auth.rs  intelligence.rs  intelligence_client.rs  mod.rs  ocr.rs  ticket_ingestion.rs
docs/: BACKEND_TICKET_INGESTION_PLAN.md  DASHBOARD& ANIMATIONS_GUIDE .md  DEMO_USER_IMP_PLAN.md  FRONTEND_API_PROXY_FIX.md  IMAGE_TICKET_OCR_PLAN.md  OCR_INTEGRATION_NOTES.md  OCR_WARMUP_IMPLEMENTATION.md  PREDICTION_MODELS_IMP_PLAN.md  PROXIMAS IDEAS.txt  Python_Migration_plan.md  README.md  SECURITY_AUDIT.md  WARMUP_FEATURE_SUMMARY.md  WARMUP_TESTING_GUIDE.md  WARMUP_VISUAL_COMPARISON.md  WORKER_PDF_PLAN.md  mermaid.txt
frontend/: Cargo.toml  README.md  Trunk.toml  dockerfile  index.html  nginx.conf
frontend/src/: lib.rs
frontend/src/api/: auth.rs  mod.rs  prediction.rs  stats.rs  tickets.rs
frontend/src/components/: ai_loader.rs  animated_counter.rs  button.rs  card.rs  chart.rs  fade_transition.rs  input.rs  mod.rs  prediction_card.rs  product_list_modal.rs  sidebar.rs
frontend/src/pages/: dashboard.rs  example.rs  history.rs  login.rs  mod.rs  monthly_evolution.rs  prediction.rs  register.rs  stats.rs  upload.rs
intelligence-service/: .dockerignore  Dockerfile  apply_sql.py  constants.py  debug_db.py  gunicorn.conf.py  main.py  models.py  predictor.py  processor.py  requirements.txt  test_predictor.py  test_security.py
intelligence-service/services/: __init__.py  image_parser.py  pdf_parser.py
ocr-service/: .gitignore  README.md  gunicorn.conf.py  requirements.txt  test_response.json  test_worker.ps1  test_worker.py
ocr-service/src/: __init__.py  constants.py  main.py  models.py  processor.py
ocr-service/src/services/: __init__.py  pdf_parser.py
sql/schema/: schema.sql
