[package]
name = "mercastats"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["backend"]
resolver = "2"

[dependencies]
# Dependencias compartidas entre miembros del workspace
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid", "migrate"] }