[workspace]
members = ["backend", "frontend"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Dependencias compartidas que heredan el backend y el frontend
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid", "migrate", "rust_decimal"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"