[package]
name = "mercastats-backend"
version.workspace = true
edition.workspace = true

[dependencies]
# Framework web
axum = "0.7"
tokio = { workspace = true }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Base de datos
sqlx = { workspace = true }

# Serialización
serde = { workspace = true }
serde_json = "1.0"

# Env
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Fechas
chrono = { version = "0.4", features = ["serde"] }

# Números decimales con precisión
rust_decimal = { version = "1.33", features = ["serde"] }

# Base64 encoding/decoding
base64 = "0.21"

# Autenticación
bcrypt = "0.15"
jsonwebtoken = "9.2"
validator = { version = "0.18", features = ["derive"] }

# Errores
thiserror = "1.0"
anyhow = "1.0"

# Integración con Python
pyo3 = { version = "0.21", features = ["auto-initialize"] }
