[package]
name = "mercastats-backend"
version.workspace = true
edition.workspace = true

[dependencies]
# Framework web
axum = "0.7"
tokio = { workspace = true }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
base64ct = "1.6.0"
home = "=0.5.9"
thiserror = "=1.0.64"

# Base de datos
sqlx = { workspace = true }

# Serializacion
serde = { workspace = true }
serde_json = "1.0"

# Env
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Fechas
chrono = { version = "0.4", features = ["serde"] }

# Numeros decimales con precision
rust_decimal = { version = "1.33", features = ["serde"] }

# Base64 encoding/decoding
base64 = "0.21"

# Autenticacion
bcrypt = "0.15"
jsonwebtoken = "9.2"
validator = { version = "0.18", features = ["derive"] }

# Errores

anyhow = "1.0"

# HTTP client para servicios externos
reqwest = { version = "0.11", features = ["json", "multipart"] }

# UUID
uuid = { version = "1.0", features = ["serde", "v4"] }