[package]
name = "mercastats-frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Leptos framework
leptos = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }

# HTTP client
reqwasm = "0.5"
gloo-net = "0.5"
gloo-timers = { version = "0.3", features = ["futures"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WebAssembly utilities
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "File",
    "FileList",
    "FileReader",
    "FormData",
    "HtmlInputElement",
    "Storage",
    "Event",
    "Blob",
    "Url",
    "DragEvent",
    "ClipboardEvent",
    "DataTransfer",
] }

# Logging
log = "0.4"
console_log = "1.0"
console_error_panic_hook = "0.1"

# Utilities
chrono = { version = "0.4", features = ["wasmbind"] }
